User data update

--- a/Geosemantic.Client/src/app/pages/users/users.component.scss
+++ b/Geosemantic.Client/src/app/pages/users/users.component.scss
@@ -10,6 +10,7 @@
 
             > .header {
 
+                min-height: 100px;
                 .title-bar{
                     width: 100%;
                 }
