--- a/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.html
+++ b/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.html
@@ -32,10 +32,10 @@
             <div class="result-item" *ngFor="let item of searchItems">
                 <div class="title blue-800-fg">{{item.title}}</div>
                 <div class="url green-800-fg">{{item.url}}</div>
-                <div class="excerpt">{{item.excerpt}}</div>
+                <div class="excerpt">{{item.description}}</div>
             </div>
 
-            <div class="simple-pagination">
+            <!-- <div class="simple-pagination">
 
                 <button mat-button class="pagination-item disabled" disabled="disabled"
                         aria-label="Go to previous page">
@@ -74,7 +74,7 @@
                     <mat-icon>chevron_right</mat-icon>
                 </button>
 
-            </div>
+            </div> -->
 
         </div>
 
