--- a/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.scss
+++ b/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.scss
@@ -33,7 +33,34 @@ newsletter {
     }
 
     .content {
-
+        // mat-panel-title{
+        //     min-width: 250px;
+        // }
+        // .mat-expansion-panel-header-description, .mat-expansion-panel-header-title {
+        //     margin-right: 0px;
+        // }
+        .mat-expansion-panel-header {
+            font-family: Roboto, "Helvetica Neue", sans-serif;
+        }
+        mat-panel-title{
+            display: flex;
+            flex-direction: column;
+        }
+        .header-title{
+            font-size: 15px;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .header-sub-title{
+            font-size: 12px;
+            color:rgba(0,0,0,.54);
+            .name{
+                font-weight: normal;
+            }
+        }
+        mat-expansion-panel-header{
+            min-height: 80px;
+        }
         .result-info {
             padding-bottom: 16px;
             border-bottom: 1px solid rgba(0, 0, 0, 0.12);
@@ -42,8 +69,8 @@ newsletter {
         .results {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            max-width: 512px;
+            //align-items: center;
+           // max-width: 512px;
 
             .result-item {
                 margin-top: 24px;
