--- a/Geosemantic.Client/src/app/pages/users/users.component.html
+++ b/Geosemantic.Client/src/app/pages/users/users.component.html
@@ -19,17 +19,25 @@
                 <!-- / APP TITLE -->
 
                 <!-- SEARCH -->
-                <div class="search-input-wrapper mx-xs-24 m-md-0" fxFlex="25" fxLayout="row" fxLayoutAlign="start center">
+                <!-- <div class="search-input-wrapper mx-xs-24 m-md-0" fxFlex="25" fxLayout="row" fxLayoutAlign="start center">
                     <label for="search" >
                         <mat-icon class="secondary-text">search</mat-icon>
                     </label>
                     <mat-form-field floatLabel="never" fxFlex="1 0 auto">
                         <input id="search" matInput #filter placeholder="Search">
                     </mat-form-field>
-                </div>
+                </div> -->
                 <!-- / SEARCH -->
             </div>
-            <div class="title-bar button-bar" fxLayout="row" fxLayoutAlign="end end" *ngIf="tabindex==0" [@animate]="{value:'*',params:{delay:'100ms',y:'25px'}}">
+            <div class="title-bar button-bar" fxLayout="column" fxLayoutAlign="top start" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center"  [@animate]="{value:'*',params:{delay:'100ms',y:'25px'}}">
+                <div class="search-input-wrapper mx-xs-24 m-md-0" fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                        <label for="search" >
+                            <mat-icon class="secondary-text">search</mat-icon>
+                        </label>
+                        <mat-form-field floatLabel="never" fxFlex="1 0 auto">
+                            <input id="search" matInput #filter placeholder="Search">
+                        </mat-form-field>
+                    </div>
                 <button mat-stroked-button color="primary" class="title-button fuse-white my-12 mt-sm-0" (click)="refresh()">
                     Refresh
                 </button>
