--- a/Geosemantic.Client/src/app/pages/user/user.component.html
+++ b/Geosemantic.Client/src/app/pages/user/user.component.html
@@ -1,47 +1,39 @@
-<div id="register" class="page-layout carded fullwidth inner-scroll">
-        <div class="content-card">
-                <div class="card-header" fxLayout="row" fxLayoutAlign="start center">
-                    <!-- <span class="card-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
-                        
-                    </span> -->
-                </div>
-        </div>
+<div id="user" class="page-layout carded fullwidth inner-scroll">
     <div class="top-bg accent"></div>
     <div class="center">
         <div class="header accent" fxLayout="column" fxLayoutAlign="center start">
             <div class="title-bar" fxLayout="column" fxLayoutAlign="top start" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
                 <div class="logo my-12 m-sm-0 pt-14" fxLayout="row" fxLayoutAlign="start center">
                     <img class="logo-icon" src="assets/images/logos/logo.png">
-                    <span class="logo-text secondary-text"><strong>Geosemantic</strong></span>
-                    <!-- <span class="logo-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
-                            Geosemantic
-                    </span> -->
+                    <span class="logo-text secondary-text"><strong> {{cardTitle}}</strong></span>
+
                 </div>
             </div>
         </div>
         <div class="content-card">
-            <div class="card-header" fxLayout="row" fxLayoutAlign="center">
-                <span class="card-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'250px'}}">
-                        Register New User
+            <!-- <div class="card-header" fxLayout="row" fxLayoutAlign="start center">
+                <span class="card-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
+                    {{cardTitle}}
                 </span>
-            </div>
+            </div> -->
             <div class="info-content">
-                <form novalidate name="form" [formGroup]="form" class="p-24 mr-24" fxLayout="column" fxLayoutAlign="center"
-                    fxFlex="1 0 auto" fusePerfectScrollbar>
-                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto" fxLayoutGap="20px">
-                        <mat-form-field fxFlex="50" >
-                            <input matInput placeholder="First name" formControlName="firstName" required >
+                <form novalidate name="form" [formGroup]="form" class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
+                    fusePerfectScrollbar>
+
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="First name" formControlName="firstName" required>
                             <mat-error>First Name is required!</mat-error>
                         </mat-form-field>
-                        <mat-form-field fxFlex="50" >
-                            <input matInput placeholder="Last name" formControlName="lastName" required >
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="Last name" formControlName="lastName" required>
                             <mat-error>Last Name is required</mat-error>
                         </mat-form-field>
                     </div>
 
-                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto" fxLayoutGap="20px">
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
                         <mat-form-field fxFlex="50">
-                            <input matInput placeholder="Mobile Number" onlyNumber formControlName="mobileNumber" maxlength="10"  required>
+                            <input matInput placeholder="Mobile Number" onlyNumber formControlName="mobileNumber" maxlength="10" required>
                             <mat-error *ngIf="form.get('mobileNumber').hasError('required')">
                                 Mobile Numbe is required
                             </mat-error>
@@ -61,15 +53,15 @@
                         </mat-form-field>
                     </div>
 
-                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto" fxLayoutGap="20px">
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
                         <mat-form-field fxFlex="50">
-                            <input matInput [matDatepicker]="picker" placeholder="Date of birth" required formControlName="dateOfBirth" >
+                            <input matInput [matDatepicker]="picker" placeholder="Date of birth" required formControlName="dateOfBirth">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-error>Date of birth is required</mat-error>
                             <mat-datepicker #picker></mat-datepicker>
                         </mat-form-field>
                         <mat-form-field fxFlex="50">
-                            <mat-select placeholder="Gender" formControlName="genderType" required >
+                            <mat-select placeholder="Gender" formControlName="genderType" required>
                                 <mat-option *ngFor="let gender of genderTypes" [value]="gender.key">
                                     {{gender.value}}
                                 </mat-option>
@@ -78,43 +70,42 @@
                         </mat-form-field>
                     </div>
 
-                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto" fxLayoutGap="20px">
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
                         <mat-form-field fxFlex="50">
-                            <mat-select placeholder="Role" formControlName="roleId" required >
+                            <mat-select placeholder="Role" formControlName="roleId" required>
                                 <mat-option *ngFor="let role of roleTypes" [value]="role.key">
                                     {{role.value}}
                                 </mat-option>
                             </mat-select>
                             <mat-error>Role is required</mat-error>
                         </mat-form-field>
-                        
                     </div>
-                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto" fxLayoutGap="20px">
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
                         <mat-form-field fxFlex="50">
-                            <input matInput type="password" placeholder="Password" formControlName="password" >
+                            <input matInput type="password" placeholder="Password" formControlName="password">
                             <mat-error>
                                 Password is required
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field fxFlex="50">
-                            <input matInput type="password" placeholder="Password (Confirm)" formControlName="confirmpassword">
-                            <mat-error *ngIf="form.get('confirmpassword').hasError('required')">
+                            <input matInput type="password" placeholder="Password (Confirm)" formControlName="passwordConfirm">
+                            <mat-error *ngIf="form.get('passwordConfirm').hasError('required')">
                                 Password confirmation is required
                             </mat-error>
-                            <mat-error *ngIf="!form.get('confirmpassword').hasError('required') &&
-                            form.get('confirmpassword').hasError('passwordsNotMatching')">
+                            <mat-error *ngIf="!form.get('passwordConfirm').hasError('required') &&
+                            form.get('passwordConfirm').hasError('passwordsNotMatching')">
                                 Passwords must match
                             </mat-error>
                         </mat-form-field>
                     </div>
 
                     <div fxLayout="row" class="button-bar" fxLayoutAlign="end center">
-                        <button mat-raised-button color="warn" [routerLink]="'/login'">
+                        <button mat-raised-button color="warn" [routerLink]="'/users'">
                             <mat-icon class="material-icons md-36">remove</mat-icon>
                             Cancel
                         </button>
 
-                        <button mat-raised-button color="accent" (click)="onRegister()">
+                        <button mat-raised-button color="accent" (click)="save()">
                             <mat-icon class="material-icons md-36">save</mat-icon>
                             Save
                         </button>
@@ -123,5 +114,4 @@
             </div>
         </div>
     </div>
-
 </div>
