--- a/Geosemantic.Client/src/app/pages/register/register.component.html
+++ b/Geosemantic.Client/src/app/pages/register/register.component.html
@@ -11,8 +11,8 @@
         <div class="header accent" fxLayout="column" fxLayoutAlign="center start">
             <div class="title-bar" fxLayout="column" fxLayoutAlign="top start" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
                 <div class="logo my-12 m-sm-0 pt-14" fxLayout="row" fxLayoutAlign="start center">
-                    <img class="logo-icon" src="assets/images/logos/logo.png">
-                    <span class="logo-text secondary-text"><strong>Geosemantic</strong></span>
+                    <img  width="250" height="100" src="assets/images/logos/logo.png">
+                    <!-- <span class="logo-text secondary-text"><strong>Geosemantic</strong></span> -->
                     <!-- <span class="logo-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
                             Geosemantic
                     </span> -->
