--- a/Geosemantic.Client/src/app/pages/awaitingapproval/awaitingapproval.component.html
+++ b/Geosemantic.Client/src/app/pages/awaitingapproval/awaitingapproval.component.html
@@ -8,8 +8,7 @@
         <div class="header accent" fxLayout="column" fxLayoutAlign="center start">
             <div class="title-bar" fxLayout="column" fxLayoutAlign="top start" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
                 <div class="logo my-12 m-sm-0 pt-14" fxLayout="row" fxLayoutAlign="start center">
-                    <img class="logo-icon" src="assets/images/logos/logo.png">
-                    <span class="logo-text secondary-text"><strong>Geosemantic</strong></span>
+                    <img  width="250" height="100" src="assets/images/logos/logo.png">
                 </div>
             </div>
         </div>
@@ -22,7 +21,7 @@
 
                             <mat-card-header>
                                 <div mat-card-avatar fxLayout="row" fxLayoutAlign="start center">
-                                    <img src="assets/images/avatars/profile.jpg" class="mat-avatar avatar" alt="{{users.fullName}}" fxHide fxShow.gt-sm/>
+                                    <img src="assets/images/avatars/profile.jpg" class="mat-avatar avatar"  fxHide fxShow.gt-sm/>
 
                                 </div>
 
