review page changes

--- a/Geosemantic.Client/src/app/pages/underreview/underreview.component.html
+++ b/Geosemantic.Client/src/app/pages/underreview/underreview.component.html
@@ -1,4 +1,4 @@
-<div id="underriview" class="page-layout carded fullwidth inner-scroll">
+<div id="underreview" class="page-layout carded fullwidth inner-scroll">
     <div class="content-card">
         <div class="card-header" fxLayout="row" fxLayoutAlign="start center">
         </div>
