news feed link added

--- a/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.html
+++ b/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.html
@@ -30,7 +30,7 @@
                           </mat-expansion-panel-header>
                           <div >
                                 <div class="title blue-800-fg">{{item.title}}</div>
-                                <div class="url green-800-fg">{{item.url}}</div>
+                                <div class="url green-800-fg"><a href="{{item.url}}" target="_blank">{{item.url}}</a></div>
                                 <div class="excerpt">{{item.description}}</div>
                         </div>
                         </mat-expansion-panel>
