--- a/Geosemantic.Command/Email/Templates/Users/UserRegistration.html
+++ b/Geosemantic.Command/Email/Templates/Users/UserRegistration.html
@@ -68,7 +68,7 @@
         New Agent has been registered on Geosemantic. Below are the Agent details
         <br />
         <br />
-        <div>User Name - <strong>##AGENTNAME##</strong></div>
+        <div>User Name - <strong>##USERNAME##</strong></div>
         <div>Mobile Number - <strong>##MOBILENUMBER##</strong></div>
         <div>Email - <strong>##EMAIL##</strong></div>
         <div>Date Of Birth - <strong>##DOB##</strong></div>
