--- a/Geosemantic.Client/src/app/pages/awaitingapproval/awaitingapproval.component.html
+++ b/Geosemantic.Client/src/app/pages/awaitingapproval/awaitingapproval.component.html
@@ -7,7 +7,7 @@
     <div class="center">
         <div class="header accent" fxLayout="column" fxLayoutAlign="center start">
             <div class="title-bar" fxLayout="column" fxLayoutAlign="top start" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
-                <div class="logo my-12 m-sm-0 pt-14" fxLayout="row" fxLayoutAlign="start center">
+                <div class="logo my-12 pt-14" fxLayout="row" fxLayoutAlign="start center">
                     <img  width="250" height="100" src="assets/images/logos/logo_white.png">
                 </div>
             </div>
